<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Capture</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="capture">Capture</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string><string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="picture">Picture</string>
    <string name="nothing">Nothing</string>
    

</resources>