<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exit_but"
        android:layout_alignLeft="@+id/username_text"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
         />

    <Button
        android:id="@+id/exit_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="168dp"
        android:text="@string/exit"
        android:width="50dp" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/username" />

    <Button
        android:id="@+id/login_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/exit_but"
        android:layout_alignBottom="@+id/exit_but"
        android:layout_alignRight="@+id/password_text"
        android:text="@string/login" />

    <EditText
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_but"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/nothing"
        android:ems="10" />
    

</RelativeLayout>